# ComfyUI_Gayrat

./: .gitignore  README.md  README1.md  README2.md  __init__.py  pyproject.toml  repair.txt  requirements.txt  sync_to_docker.sh  заметки.txt
GoogleTranslateNode/: __init__.py  google_translate_node.py
ImageResize/: image_scale_by_aspect_ratio_v2.py  imagefunc.py
Kontext/: preset_kontext.json
Latent/: LatentSelectRes.py  flux_sd_latent.js  readme.md
LayerFilter/: LayerFilterFilmV2.py  imagefunc.py
MaskAreaCondition/: adaptive_crop_stitch_params_node.py
Samplers/: cust_samplers.py  params.json  test.py
Samplers/old/: err.txt  test2.py  test3.py
SaveImageAndMask/: LoadImageWithTrimOptions.py  save_image_with_alpha.py  save_image_with_mask.py  сustom_load_image.py
ergouzi/: EGJDFDHT.py
js/: LatentSelectRes.js  google_translate2.js  translator_node.js
js-stop/: LatentSelectRes.js
nodes_py/: AGSoft_latent_presets.py  CLIPTextEncodeLong.py  GF_FillMaskBBox.py  GayratFluxDualLoader.py  ModelResolutionSelector.py  SDXL_samplers.py  SDXL_samplers2.py  YANCGetMeanColor.py  adaptive_crop_stitch_params_node.py  clear_cache.py  color_correction.py  cust_samplers.py  float_slider.py  google_translate2.py  google_translate_node.py  image_concat_node.py  imagecreatemask.py  pixtral_large_node.py  pixtral_translate_node.py  save_image_jpg.py
