[project]
name = "comfyui_custom_nodes_gayrat"
description = "Nodes:GoogleTranslate."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/gayratv/ComfyUI_Custom_Nodes_Gayrat"

[tool.comfy]
PublisherId = "gayrat"
DisplayName = "ComfyUI_Custom_Nodes_Gayrat"
Icon = ""
