[project]
name = "comfyui_gayrat"
description = "набор нод: google translate, Concat Images, Flux/SD Latent Image"
version = "1.0.7"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/gayratv/ComfyUI_Gayrat"

[tool.comfy]
PublisherId = "gayrat"
DisplayName = "ComfyUI_Gayrat"
Icon = ""
